add singleplayer leaderboard