@@ -60,12 +60,13 @@ class LeaderboardEntryTest {
     void testToString() {
         Date d = new GregorianCalendar(3, 3, 3).getTime();
         LeaderboardEntry l2 = new LeaderboardEntry("abc", 2, d);
-        assertLinesMatch(List.of(
-                "commons.LeaderboardEntry@[0-9a-f]*\\[",
-                "  date=" + d,
-                "  score=2",
-                "  username=abc",
-                "]"
-        ), Arrays.asList(l2.toString().split(System.lineSeparator())));
+        assertEquals(l2.toString(),"Tue Apr 03 00:00:00 CET 3,2,abc");
+//        assertLinesMatch(List.of(
+//                "commons.LeaderboardEntry@[0-9a-f]*\\[",
+//                "  date=" + d,
+//                "  score=2",
+//                "  username=abc",
+//                "]"
+//        ), Arrays.asList(l2.toString().split(System.lineSeparator())));
     }
 }
